--- a/main_v4.ipynb
+++ b/main_v4.ipynb
@@ -587,7 +587,7 @@
    "source": [
     "# Load the data\n",
     "genes2terms = pd.DataFrame()\n",
-    "genes2terms = pd.read_pickle(\"genes2terms.pkl\")\n",
+    "genes2terms = pd.read_pickle(\"genes2terms_012.pkl\")\n",
     "# genes2terms = genes2terms.set_index('genes')"
    ]
   },
