--- a/main_human_v1.ipynb
+++ b/main_human_v1.ipynb
@@ -85,38 +85,124 @@
     "#Keep -3 and under as sl, remove above 3 and non-sl is the rest\n",
     "gene2sl.loc[gene2sl.sl <= -3, 'sl'] = 1\n",
     "gene2sl.drop(gene2sl[gene2sl.sl >= 3].index, axis=0, inplace=True)\n",
-    "gene2sl.loc[gene2sl.sl != 1, 'sl'] = 0\n",
-    "#gene2sl.loc[gene2sl.sl >= 3, 'sl'] = -1\n",
-    "#gene2sl.loc[(gene2sl.sl > -3) & (gene2sl.sl < 3), 'sl'] = 0\n",
-    "#gene2sl   = pd.concat([genes, sl_lables], axis=1)"
+    "gene2sl.loc[gene2sl.sl != 1, 'sl'] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>genes</th>\n",
+       "      <th>sl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>AARS2$AARS2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>AARS2$AATF</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>AARS2$ABCB7</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>AARS2$ACTL6A</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>AARS2$ACTR10</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>458</td>\n",
+       "      <td>AARS2$negative</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>459</td>\n",
+       "      <td>AATF$AATF</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>460</td>\n",
+       "      <td>AATF$ABCB7</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>461</td>\n",
+       "      <td>AATF$ACTL6A</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>462</td>\n",
+       "      <td>AATF$ACTR10</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>460 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "count    104670.000000\n",
-       "mean          0.016031\n",
-       "std           0.125597\n",
-       "min           0.000000\n",
-       "25%           0.000000\n",
-       "50%           0.000000\n",
-       "75%           0.000000\n",
-       "max           1.000000\n",
-       "Name: sl, dtype: float64"
+       "              genes   sl\n",
+       "0       AARS2$AARS2  0.0\n",
+       "1        AARS2$AATF  0.0\n",
+       "2       AARS2$ABCB7  0.0\n",
+       "3      AARS2$ACTL6A  0.0\n",
+       "4      AARS2$ACTR10  0.0\n",
+       "..              ...  ...\n",
+       "458  AARS2$negative  0.0\n",
+       "459       AATF$AATF  1.0\n",
+       "460      AATF$ABCB7  0.0\n",
+       "461     AATF$ACTL6A  0.0\n",
+       "462     AATF$ACTR10  0.0\n",
+       "\n",
+       "[460 rows x 2 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gene2sl.sl.describe()"
+    "gene2sl.head(460)"
    ]
   },
   {
@@ -244,8 +330,7 @@
    "source": [
     "# Load the data\n",
     "genes2terms = pd.DataFrame()\n",
-    "genes2terms = pd.read_pickle(\"genes2terms_012_human.pkl\")\n",
-    "# genes2terms = genes2terms.set_index('genes')"
+    "genes2terms = pd.read_pickle(\"genes2terms_012_human.pkl\")"
    ]
   },
   {
