--- a/testing.ipynb
+++ b/testing.ipynb
@@ -32,9 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.010256471235943906, 0.427010207052797)\n",
+      "CPU times: user 6.74 ms, sys: 8.8 ms, total: 15.5 ms\n",
+      "Wall time: 31.5 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "import numpy as np\n",
@@ -44,6 +54,29 @@
     "x = np.random.randint(10, size=6000)  # One-dimensional array\n",
     "y = np.random.randint(10, size=6000)  # One-dimensional array\n",
     "print(pearsonr(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SpearmanrResult(correlation=0.010175657102084703, pvalue=0.43066208717276455)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats.stats import spearmanr\n",
+    "np.random.seed(0)  # seed for reproducibility\n",
+    "\n",
+    "x = np.random.randint(10, size=6000)  # One-dimensional array\n",
+    "y = np.random.randint(10, size=6000)  # One-dimensional array\n",
+    "print(spearmanr(x,y))"
    ]
   },
   {
@@ -864,22 +897,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(58581, 10532)"
+       "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tcga.shape"
+    "# tcga['TCGA-2G-AAHP-01'][2]\n",
+    "'TCGA-2G-AAH2-01' in tcga"
    ]
   },
   {
