Update TGCT cancer proliferation.ipynb

--- a/TGCT cancer proliferation.ipynb
+++ b/TGCT cancer proliferation.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cancer_PI  = GOcSL.utilis.get_PI(PCNA, TCGA)\n",
+    "cancer_PI  = GOcSL.utils.get_PI(PCNA, TCGA)\n",
     "cSL_load   = GOcSL.cSL.get_cSL_load(TCGA, 33)\n",
     "GORF       = GOcSL.GO2SL.GO_Classifier(GOcSL.constants.HORLBECK_DATA, TCGA, GOcSL.constants.RANDOM_FOREST)\n",
     "GOcSL_load = GORF.get_GOSL_load(1)\n",
