Update TGCT cancer proliferation.ipynb

--- a/TGCT cancer proliferation.ipynb
+++ b/TGCT cancer proliferation.ipynb
@@ -16,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats.stats import spearmanr\n",
     "import GOcSL"
    ]
   },
@@ -62,7 +63,8 @@
    "outputs": [],
    "source": [
     "cancer_PI  = GOcSL.utils.get_PI(PCNA, TCGA)\n",
-    "cSL_load   = GOcSL.cSL.get_cSL_load(TCGA, 33)\n",
+    "CSL        = GOcSL.cSL.CSL_Classifier(cSL, TCGA, GOcSL.constants.RANDOM_FOREST)\n",
+    "cSL_load   = CSL.get_cSL_load(33)\n",
     "GORF       = GOcSL.GO2SL.GO_Classifier(GOcSL.constants.HORLBECK_DATA, TCGA, GOcSL.constants.RANDOM_FOREST)\n",
     "GOcSL_load = GORF.get_GOSL_load(1)\n",
     "print('The cSL load and cancer proliferation Spearman correlation\\n')\n",
