Update TGCT cancer proliferation.ipynb

--- a/TGCT cancer proliferation.ipynb
+++ b/TGCT cancer proliferation.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "cancer_PI  = GOcSL.utils.get_PI(PCNA, TCGA)\n",
-    "CSL        = GOcSL.cSL.CSL_Classifier(cSL, TCGA, GOcSL.constants.RANDOM_FOREST)\n",
+    "CSL        = GOcSL.cSL.CSL_Classifier(cSL, TCGA)\n",
     "cSL_load   = CSL.get_cSL_load(33)\n",
     "GORF       = GOcSL.GO2SL.GO_Classifier(GOcSL.constants.HORLBECK_DATA, TCGA, GOcSL.constants.RANDOM_FOREST)\n",
     "GOcSL_load = GORF.get_GOSL_load(1)\n",
