Update TGCT cancer proliferation.ipynb

--- a/TGCT cancer proliferation.ipynb
+++ b/TGCT cancer proliferation.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "PCNA = GOcSL.dataloader.get_PCNA_genes(GOcSL.constants.PCNA_DATA_PATH)\n",
-    "cSL  = GOcSL.dataloader.get_cSL_genes(GOcSL.constants.CSL_DATA_PATH)\n",
+    "# cSL  = GOcSL.dataloader.get_cSL_genes(GOcSL.constants.CSL_DATA_PATH)\n",
     "TCGA = GOcSL.dataloader.get_TCGA_data(GOcSL.constants.TCGA_DATA_PATH, GOcSL.constants.TGCT_SAMPLES_PATH)"
    ]
   },
@@ -50,7 +50,7 @@
    "source": [
     "# 2. Calculate the PI (Proliferation Index)\n",
     "For each sample calculate:\n",
-    "1. The PI\n",
+    "1. The PI that is based on the meta-PCNA and computed as the median expression values of the set of meta-PCNA genes\n",
     "2. cSL load using the 33 percentile genes\n",
     "3. GOcSL load using the 1 percentile genes\n",
     "4. Spearman correlation between 1 and 2, and 1 and 3 "
@@ -63,14 +63,15 @@
    "outputs": [],
    "source": [
     "cancer_PI  = GOcSL.utils.get_PI(PCNA, TCGA)\n",
-    "CSL        = GOcSL.cSL.CSL_Classifier(cSL, TCGA)\n",
+    "CSL        = GOcSL.cSL.CSL_Classifier(GOcSL.constants.CSL_DATA_PATH, TCGA)\n",
     "cSL_load   = CSL.get_cSL_load(33)\n",
-    "GORF       = GOcSL.GO2SL.GO_Classifier(GOcSL.constants.HORLBECK_DATA, TCGA, GOcSL.constants.RANDOM_FOREST)\n",
-    "GOcSL_load = GORF.get_GOSL_load(1)\n",
+    "GORF       = GOcSL.GO2SL.GO_Classifier(GOcSL.constants.HORLBECK_DATA_PATH, GOcSL.constants.GO_BASIC_PATH, \n",
+    "                                       GOcSL.constants.HUMAN_GAF_PATH, TCGA, GOcSL.constants.RANDOM_FOREST)\n",
+    "GOcSL_load = GORF.get_GOcSL_load(1)\n",
     "print('The cSL load and cancer proliferation Spearman correlation\\n')\n",
-    "print(spearmanr(cSL_load,cancer_PI))\n",
+    "print(GOcSL.utils.correlate(cSL_load,cancer_PI, GOcSL.constants.SPEARMAN))\n",
     "print('The GOcSL load and cancer proliferation Spearman correlation\\n')\n",
-    "print(spearmanr(GOcSL_load,cancer_PI))"
+    "print(GOcSL.utils.correlate(GOcSL_load,cancer_PI, GOcSL.constants.SPEARMAN))"
    ]
   }
  ],
